# Grail

./: .cvsignore  .gitignore  Grail.md  Makefile  Makefile.in  README  README.devel  README.md  README.md.devel  RELNOTES  TODO  config.status  configure  configure.ac  grammars.tgz
CVS/: Entries  Repository
devel/: Makefile  Makefile.in  configure  configure.ac
devel/CVS/: Entries  Repository
grammars/: .#big_french_drt.pl.1.95  README  README.devel  big_dutch.pl  big_french.pl  big_french_big_events.pl  big_french_drt.pl  big_french_drt_backup.pl  big_french_dynamics.pl  binary_tense.pl  cgn.events.pl  cgn.pl  clitics.pl  clitics_simple.pl  discontinuity.pl  drt.html  drt.pl  drt_assoc.pl  drt_bos.pl  drt_bos_cont.pl  drt_bos_delay.pl  drt_bos_e.pl  dutch.html  dutch.pl  dutch0.pl  dutch00.pl  dutch01.pl  dynamics.pl  ellipsis.pl  engproncase1.pl  engproncase2.pl  engrel.pl  engthatrel1.pl  exam.pl  film_db.pl  french_roles.pl  grail0.html  grail0.pl  grail_lr.pl  hitchhiker.pl  (+10 more)
grammars/CVS/: Entries  Repository  Root
images/: ffwd.xpm  next.xpm  par_left.xpm  par_right.xpm  par_up.xpm  play.xpm  previous.xpm  stop.xpm  tensor_down.xpm  tensor_left.xpm  tensor_right.xpm  u_par_down.xpm  u_par_up.xpm  u_tensor_down.xpm  u_tensor_up.xpm  undo.xpm
images/CVS/: Entries  Repository
resources/: grail3.dot  grail3.html  grail3.html.devel  help.html
resources/CVS/: Entries  Repository
source/: .#chart_var.pl.1.26  .#chart_var.pl.1.30  .#chart_var.pl.1.55  .#chart_var.pl.1.65  .#chart_var.pl.1.70  .#sem_utils.pl.1.57  .cvsignore  a.out  after.dot  array_hack.pl  auto_expand.pl  chart.pl  chart_ext.pl  chart_stable.pl  chart_var.pl  chart_var.pl.~1.78.~  chart_var_cr.pl  chart_var_lp.pl  cky.pl  create_exec.pl  disjsetb16.pl  g3  g3.in  g3.in.devel  gen_array.pl  grail3  grail_dot.pl  grail_light.pl  grail_light_cr.pl  grail_log  grail_xpce.pl  grammar.aux  grammar.tex  graph.pl  gui.tcl  heap.pl  inert_unary.pl  insertdot  insertdot.in  latex.pl  (+19 more)
source/CVS/: Entries  Repository
